<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="Pusher" Id="{13e04ccd-6411-484e-bbb0-ee90a32c9016}">
    <Declaration><![CDATA[{attribute 'OPC.UA.DA' := '1'}
TYPE Pusher :
STRUCT
	Pusher: BOOL;
	PusherFrontLimit: BOOL;
	PusherBackLimit: BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>